# monadic

./: .gitignore  README.md  pyproject.toml
monadic/: __init__.py
monadic/core/: monadic.py  operator.py
